[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-googleanalytics"
version = "0.4"
license = {text = "BSD"}
authors = [{name = "Domen Kozar", email = "domen@dev.si"}]
maintainers = [{name = "Jelmer Vernooĳ", email = "jelmer@jelmer.uk"}]
description = "Sphinx extension googleanalytics"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = ["Sphinx>=0.6"]

[project.urls]
Homepage = "https://github.com/sphinx-contrib/googleanalytics"
Download = "http://pypi.python.org/pypi/sphinxcontrib-googleanalytics"
Repository = "https://github.com/sphinx-contrib/googleanalytics"

[tool.setuptools]
zip-safe = false
include-package-data = true
namespace-packages = ["sphinxcontrib"]
platforms = ["any"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.distutils.egg_info]
tag-build = "dev"
tag-date = true

[tool.aliases]
release = "egg_info -RDb ''"
